# bad-password-manager

./: .editorconfig  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  docker-compose.yml  pog.rs  rustfmt.toml
.github/workflows/: bad-password-manager.yml  devskim-analysis.yml
api/: .env  Cargo.toml  dockerfile
api/migrations/2021-08-01-024327_users/: up.sql
api/src/: main.rs  models.rs  schema.rs
api/src/user/: mod.rs  new.rs
api/src/vault/: mod.rs
app/: .dockerignore  .gitignore  README.md  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
app/public/: 404.html  about.html  global.css  index.html
app/src/: App.svelte  main.ts  routes.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/Components/: Login.svelte  Navbar.svelte  Scroll.svelte  ScrollItem.svelte  Vault.svelte
app/src/Functions/: checkPassStrength.ts  persistUsername.ts
app/src/Routes/: Login.svelte  Lost.svelte  Vault.svelte
cli/: Cargo.toml  README.md
cli/src/: credentials.rs  flow.rs  hashes.rs  main.rs  newuser.rs
cli/src/commands/: mod.rs  newuser.rs
cli/src/util/: encryption.rs  hashes.rs  mod.rs  random.rs
nginx/: README.md  dockerfile  nginx.conf
shittyHash/: Cargo.toml
shittyHash/src/: lib.rs
src/: api.rs  main.rs
