[package]
name = 'bad_pass_manager'
version = '0.1.0'
edition = '2018'
authors = ['Kennan Hunter <kennanhunter5@gmail.com>']

[dependencies]
rocket_contrib = '0.4'
shitty_hash = {path = "./shittyHash"}

[dependencies.diesel]
version = '1.4.4'
features = ['postgres']

[dependencies.rocket]
version = '0.4.10'
